--- a/blogs/day1.html
+++ b/blogs/day1.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <a href="/" class="home margin light-gray large-font">
+  <a href="/dev-blogs/" class="home margin light-gray large-font">
     DEV BLOG HOME
   </a>
   <h class="margin"> <b> 5/5 </b> </h>
